integration_tests/tests/integration_tests/snapshots/integration_tests__show_fungible_flag_tests__get_asset_by_owner_with_show_fungible.snap
---
source: integration_tests/tests/integration_tests/show_fungible_flag_tests.rs
expression: response
---
{
  "total": 5,
  "limit": 1000,
  "cursor": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
  "items": [
    {
      "interface": "FungibleToken",
      "id": "J1toso1uCk3RLmjorhTtrVwY9HJ7X8V9yYac6Y7kGCPn",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://storage.googleapis.com/token-metadata/JitoSOL.json",
        "files": [],
        "metadata": {
          "name": "Jito Staked SOL",
          "symbol": "JitoSOL",
          "token_standard": "Fungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "EDGARWktv3nDxRYjufjdbZmryqGXceaFPoPpbUzdpqED",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "GqPnSDXwp4JFtKS7YZ2HERgBbYLKpKVYy9TpVunzLRa9"
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "balance": 84532784,
        "supply": 14621664301193772,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "4gbnMK8Yv5ySJ4aFFTR9EFf3nY2GKbDwd9U1zh41inX9",
        "mint_authority": "6iQKfEyhr3bZMotVkW6beNZz5CPAkiwvgV2CTje9pVSS"
      }
    },
    {
      "interface": "FungibleToken",
      "id": "HZ1JovNiVvGrGNiiYvEozEVgZ58xaU3RKwX8eACQBCt3",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://arweave.net/GWKBRfaCBSiDWs0hYHe_PCEEhKoq_Bl3JlpmW5MqRnE",
        "files": [],
        "metadata": {
          "name": "Pyth Network",
          "symbol": "PYTH",
          "token_standard": "Fungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "HVx4oW785bu8QDQ8AwSVfD7H4iuH51ttakc2G5f9XTX8",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "GqPnSDXwp4JFtKS7YZ2HERgBbYLKpKVYy9TpVunzLRa9"
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "balance": 1029793957,
        "supply": 9999987499189378,
        "decimals": 6,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "Ah32VqAKNiE68qP35aPwxUbS15AuMo6d37ppyexR1CVe"
      }
    },
    {
      "interface": "FungibleToken",
      "id": "FoRGERiW7odcCBGU1bztZi16osPBHjxharvDathL5eds",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://arweave.net/YYJp3aPnsnagzSh8ZY70XvcNb6Jo6ybZqQo54PP071I",
        "files": [],
        "metadata": {
          "name": "FORGE",
          "symbol": "FORGE",
          "token_standard": "Fungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "2xUUmrWUv8dQsgGR9gEg7vcZU8X7UhxpZbiNDRCfWU9W",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "GqPnSDXwp4JFtKS7YZ2HERgBbYLKpKVYy9TpVunzLRa9"
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "balance": 1326233303008,
        "supply": 36398767150957003,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "5CUdD64Zktf2KJyHpaEKMzAVrNwG2saYX4FSsCheuLdA",
        "mint_authority": "2xUUmrWUv8dQsgGR9gEg7vcZU8X7UhxpZbiNDRCfWU9W"
      }
    },
    {
      "interface": "ProgrammableNFT",
      "id": "Ff3Ci7EnM6KUdNDtzZvCjC5APgz1ajYW2Pt2BfT6Wftq",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://madlads.s3.us-west-2.amazonaws.com/json/5081.json",
        "files": [],
        "metadata": {
          "name": "Mad Lads #5081",
          "symbol": "MAD",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "J1S9H3QjnRtBbbuD4HjPV6RpRhwuk4zKbxsnCHuTgh9w"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.042,
        "basis_points": 420,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "5XvhfmRjwXkGp3jHGmaKpqeerNYjkuZZBYLVQYdeVcRv",
          "share": 0,
          "verified": true
        },
        {
          "address": "2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW",
          "share": 100,
          "verified": true
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": true,
        "delegate": "ww1ohRPftPHwjXAfwH65csJNY5WWKdoKbAic3Hc9UzK",
        "ownership_model": "single",
        "owner": "GqPnSDXwp4JFtKS7YZ2HERgBbYLKpKVYy9TpVunzLRa9"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "balance": 1,
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "FQ3ePUyLt2UvuQCw2nBKG8LGLvXHAZPzpdD6QQAAv9pW",
        "mint_authority": "E5MbS9TUY3P7nmQ1JLuR7bLPBfEW7m36cKJ9kRWZSbuk",
        "freeze_authority": "E5MbS9TUY3P7nmQ1JLuR7bLPBfEW7m36cKJ9kRWZSbuk"
      }
    },
    {
      "interface": "Custom",
      "id": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [],
        "metadata": {
          "name": "USDT",
          "symbol": "USDT"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "Q6XprfkF8RQQKoQVG33xT88H7wi8Uk1B1CC7YAs69Gi",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "GqPnSDXwp4JFtKS7YZ2HERgBbYLKpKVYy9TpVunzLRa9"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "balance": 10385573,
        "supply": 2389929362214841,
        "decimals": 6,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "4Av8W98PVbeYcdaw6T3L6STDdL5p3MWrqU7RkB8os4i7",
        "mint_authority": "Q6XprfkF8RQQKoQVG33xT88H7wi8Uk1B1CC7YAs69Gi",
        "freeze_authority": "Q6XprfkF8RQQKoQVG33xT88H7wi8Uk1B1CC7YAs69Gi"
      }
    }
  ]
}
